# openmv-ota

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  openmv-romfs-ota-concept-plan.md  pyproject.toml
.github/workflows/: ci.yml  hil-ota.yml
boards/OPENMV_AE3/: board.json
boards/OPENMV_N6/: board.json
boards/OPENMV_NICLAV/: board.json
ci/: build_boards.py  build_boards.sh  qemu_boot_test.py
ci/hil/: README.md  hil_coverage.py  ota_cycle.py  run_matrix.sh
compliance-templates/: conformity-assessment-checklist.md.template  eu-doc.md.template  security.txt.template  vuln-disclosure-policy.md.template
docs/: architecture.md  build.md  ci.md  flash.md  getting-started.md  project.md  romfs.md  runtime.md  server.md  threat-model.md  trailer.md
docs/compliance/: eu-cra-guide.md  red-3.3-guide.md
docs/tutorials/: first-build.md  first-ota-release.md
src/openmv_ota/: __init__.py  cli.py
src/openmv_ota/client/: __init__.py  api.py  cli.py  config.py  errors.py
src/openmv_ota/data/: boards.json
src/openmv_ota/data/firmware/OPENMV_N6/: neuralart.json
src/openmv_ota/data/n6_bootloader/: FlashLayout.tsv
src/openmv_ota/flash/: __init__.py  alif.py  arduino.py  cli.py  device.py  dfu.py  errors.py  flash.py  imx.py  inventory.py  runner.py  targets.py  tools.py
src/openmv_ota/ota/: __init__.py  _extras.py  algorithms.py  bundle.py  delta.py  errors.py  geometry.py  keys.py  manifest.py  partition.py  rollback.py  sign.py  signer.py  signer_kms.py  signer_pkcs11.py  status.py  trailer.py  verify.py  version.py
src/openmv_ota/project/: __init__.py  backends.py  cache.py  cli.py  config.py  errors.py  gitrepo.py  history.py  keybackup.py  keys.py  ledger.py  lock.py  passphrase.py  project.py  sdk_install.py
src/openmv_ota/project/resolve/: __init__.py  board.py  firmware.py  macros.py  micropython.py  sdk.py  submodules.py
src/openmv_ota/romfs/: __init__.py  boards.py  builder.py  cli.py  container.py
src/openmv_ota/romfs/firmware_build/: __init__.py  build.py
src/openmv_ota/romfs/firmware_build/ed25519_verify/: ed25519_verify.c  micropython.mk
src/openmv_ota/romfs/firmware_build/ed25519_verify/tests/: .gitkeep
src/openmv_ota/romfs/firmware_build/templates/: boot.py.in
src/openmv_ota/romfs/romfs_build/: __init__.py  build.py  compose.py  sign.py
src/openmv_ota/romfs/sdk/examples/: main.py
src/openmv_ota/romfs/sdk/openmv_ota/: __init__.py  _audit.py  _client.py  _streams.py  _telemetry.py  _update.py
src/openmv_ota/romfs/update_server/: __init__.py  app.py
src/openmv_ota/romfs/update_server/api/: __init__.py
src/openmv_ota/romfs/update_server/deploy/: docker-compose.yml  fly.toml  render.yaml
src/openmv_ota/romfs/update_server/storage/: __init__.py
src/openmv_ota/server/: __init__.py  _extras.py  admin.py  app.py  auth.py  boardmap.py  capability.py  cli.py  datalog.py  errors.py  live.py  metastore.py  publish.py  ratelimit.py  rollout.py  scopes.py  settings.py  storage.py  verify.py
src/openmv_ota/server/deploy/: Dockerfile  docker-compose.yml  fly.toml  render.yaml
tests/: README.md  conftest.py  test_cli_top.py
tests/boot_py_adversarial/: .gitkeep
tests/client/: test_api.py  test_cli.py  test_config.py  test_verbs.py
tests/ed25519_kat/: .gitkeep
tests/flash/: conftest.py  test_alif.py  test_arduino.py  test_bootloader.py  test_cli.py  test_device.py  test_dfu.py  test_erase.py  test_flash.py  test_imx.py  test_inventory.py  test_runner.py  test_targets.py  test_tools.py
tests/integration/: .gitkeep
tests/ota/: test_algorithms.py  test_delta.py  test_extras.py  test_geometry.py  test_keys.py  test_manifest.py  test_package.py  test_rollback.py  test_sign.py  test_signer.py  test_status.py  test_trailer.py  test_verify.py  test_version.py
tests/project/: conftest.py  test_backends.py  test_cache.py  test_cli.py  test_config.py  test_gitrepo.py  test_history.py  test_keybackup.py  test_keys.py  test_ledger.py  test_lock.py  test_passphrase.py  test_project.py  test_resolvers.py  test_sdk_install.py
tests/romfs/: test_boards.py  test_builder.py  test_cli.py  test_cli_helpers.py  test_container.py  test_real_image.py
tests/romfs/fixtures/: OPENMV2_romfs0.img
tests/server/: test_admin.py  test_app.py  test_auth.py  test_boardmap.py  test_capability.py  test_cli.py  test_datalog.py  test_docs.py  test_extras.py  test_live.py  test_metastore.py  test_metastore_features.py  test_publish.py  test_ratelimit.py  test_rollout.py  test_settings.py  test_storage.py  test_verify.py
tests/wycheproof/: .gitkeep
