[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmv-ota"
version = "0.0.0"
description = "Secure over-the-air update tooling for OpenMV cameras (ROMFS OTA, with room for firmware/bootloader OTA)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "OpenMV", email = "openmv@openmv.io" }]
keywords = ["openmv", "ota", "romfs", "firmware", "update", "ecdsa", "embedded"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Security :: Cryptography",
]

# Runtime dependencies are added as each tool is built out (see the plan):
#   server:   a web framework + object-storage adapters
#   sbom/cve: cyclonedx, osv/nvd scanners
dependencies = [
    "cryptography>=42",  # ECDSA keygen + signing for OTA trailers
    "pyserial>=3.5",     # serial-port discovery + 1200-baud touch-to-reset (Arduino)
    "mpremote>=1.20",    # reset OpenMV-protocol cameras into the bootloader (machine.bootloader)
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "pytest-xdist>=3", "ruff"]
server = []
hsm = []

[project.urls]
Homepage = "https://github.com/openmv/openmv-ota"
Source = "https://github.com/openmv/openmv-ota"
Issues = "https://github.com/openmv/openmv-ota/issues"

[project.scripts]
openmv-ota = "openmv_ota.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# The on-device SDK ships as package data, bundled into the ROMFS at build time.
"openmv_ota" = [
    "data/*.json",
    "data/firmware/**/*",
    "data/flashloaders/**/*",    # prebuilt i.MX RT sdphost/blhost flashloaders
    "data/n6_bootloader/*",      # static N6 CubeProgrammer FSBL/loader + FlashLayout.tsv
    "build/device/*.c",          # the ECDSA verify C module dropped into modules/
    "build/device/openmv_ota/data/*",  # the installer source, scaffolded into projects
    "romfs/sdk/**/*",
    "romfs/update_server/deploy/*",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-n auto --dist worksteal --cov=openmv_ota --cov-report=term-missing --cov-fail-under=100 --import-mode=importlib"
# Default norecursedirs excludes "build"; we have a tests/build/ dir to collect.
norecursedirs = ["*.egg", ".*", "_darcs", "CVS", "dist", "node_modules", "venv", "{arch}"]

[tool.coverage.run]
source = ["openmv_ota"]
omit = [
    # OTA-layer subsystems are stubs until later; the core romfs builder is
    # what this first tool ships, and it is held to 100%.
    "*/romfs/update_server/*",
    "*/romfs/sdk/*",
]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
# The on-device SDK and its examples are illustrative MicroPython snippets
# (intentional comma-imports, references to user-supplied callbacks); they are
# not part of the host-side lint surface.
extend-exclude = ["src/openmv_ota/romfs/sdk/examples"]
